--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
+*/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,37 +11,74 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing
 /coverage
+*/coverage
 
-# next.js
-/.next/
-/out/
-
-# production
+# React build output
+frontend/build/
 /build
 
-# misc
-.DS_Store
-*.pem
+# Express/Node.js
+backend/dist/
+backend/logs/
+*.log
 
-# debug
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env*
+frontend/.env*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Misc
+.DS_Store
+*.pem
+.vscode/
+.idea/
 
-# vercel
-.vercel
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Temporary folders
+tmp/
+temp/
 
-
-
-# google api key
+# Google API credentials
 google-api-key.json
+
+# Lock files (keep package-lock.json but ignore others)
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Runtime files
+*.tgz
+*.tar.gz
