--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
   "name": "spd-reservation",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "SSPD Meeting Room Booking System - React + Express",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/react-calendar": "^3.9.0",
-    "date-fns": "^4.1.0",
-    "googleapis": "^153.0.0",
-    "lucide-react": "^0.525.0",
-    "next": "15.4.3",
-    "react": "19.1.0",
-    "react-calendar": "^6.0.0",
-    "react-dom": "19.1.0",
-    "recharts": "^3.1.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "install:all": "npm run install:backend && npm run install:frontend",
+    "install:backend": "cd backend && npm install",
+    "install:frontend": "cd frontend && npm install",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm start",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start:backend": "cd backend && npm start",
+    "start:frontend": "cd frontend && npm run build && serve -s frontend/build",
+    "build": "npm run build:frontend",
+    "build:frontend": "cd frontend && npm run build",
+    "test": "cd frontend && npm test"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
-}
+    "concurrently": "^8.2.2",
+    "serve": "^14.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/spd-reservation.git"
+  },
+  "keywords": [
+    "meeting-room",
+    "booking",
+    "react",
+    "express",
+    "google-sheets",
+    "realtime"
+  ],
+  "author": "SSPD Team",
+  "license": "MIT"
+} 
