--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
       dockerfile: Dockerfile
     container_name: spd-reservation-app
     ports:
-      - "5000:5000"
+      - "3000:3000"  # Frontend port
+      - "5000:5000"  # Backend API port
     environment:
       - NODE_ENV=production
       - PORT=5000
+      - FRONTEND_PORT=3000
       - FRONTEND_URL=http://localhost:3000
       # Google API credentials - replace with your actual values
       - GOOGLE_TYPE=service_account
