--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,10 @@ http {
     upstream spd_backend {
         server spd-reservation:5000;
     }
+    
+    upstream spd_frontend {
+        server spd-reservation:3000;
+    }
 
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
@@ -68,11 +72,11 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Static files (React build)
+        # Frontend (React build)
         location / {
             limit_req zone=general burst=50 nodelay;
             
-            proxy_pass http://spd_backend;
+            proxy_pass http://spd_frontend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
